# ReSono-Offline-Music-Player-App

./: LICENSE  README.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  dsp_bridge.cpp  dsp_engine.cpp  dsp_engine.h
app/src/main/cpp/resono_dsp/filters/: Biquad.cpp  Biquad.h
app/src/main/java/com/fs/resono/audio/: DspAudioProcessor.kt  DspRenderersFactory.kt
app/src/main/java/com/fs/resono/data/mediastore/: MediaStoreRepository.kt  MediaStoreSong.kt  SongMapper.kt
app/src/main/java/com/fs/resono/dsp/: DspEngine.kt  DspPreferences.kt  DspState.kt
app/src/main/java/com/fs/resono/ui/: MainActivity.kt
app/src/main/java/com/fs/resono/ui/common/: PermissionGate.kt  PermissionRequestScreen.kt
app/src/main/java/com/fs/resono/ui/components/: EqSlider.kt  GainSlider.kt  ToggleSwitch.kt
app/src/main/java/com/fs/resono/ui/main/: BottomNavBar.kt  MainScreen.kt
app/src/main/java/com/fs/resono/ui/model/: SongUi.kt
app/src/main/java/com/fs/resono/ui/navigation/: NavGraph.kt  NavRoutes.kt
app/src/main/java/com/fs/resono/ui/screens/: Equlizer.kt
app/src/main/java/com/fs/resono/ui/screens/player/: Player.kt  PlayerUiState.kt
app/src/main/java/com/fs/resono/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/fs/resono/viewmodel/: DspVMFactory.kt  DspViewModel.kt  LibraryVMFactory.kt  LibraryViewModel.kt  PlayerVMFactory.kt  PlayerViewModel.kt
gradle/: libs.versions.toml
